sassi-macros/tests/lihaaf/compile_fail/wire_portable_jsonb_wrapper.stderr
error[E0277]: the trait bound `Jsonb<std::string::String>: SassiWire` is not satisfied
  --> $DIR/wire_portable_jsonb_wrapper.rs:13:14
   |
13 |     payload: Jsonb<String>,
   |              ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `SassiWire` is not implemented for `Jsonb<std::string::String>`
  --> $DIR/wire_portable_jsonb_wrapper.rs:6:1
   |
 6 | struct Jsonb<T>(T);
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `SassiWire`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 62 others
note: required by a bound in `__sassi_assert_wire_component`
  --> $DIR/wire_portable_jsonb_wrapper.rs:8:48
   |
 8 | #[derive(Debug, Clone, Serialize, Deserialize, Cacheable)]
   |                                                ^^^^^^^^^ required by this bound in `__sassi_assert_wire_component`
   = note: this error originates in the derive macro `Cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
